[package]
name = "redisson-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Error handling
anyhow = "1.0.102"

# Async runtime
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }

# Redis
fred = { path = "../fred", version = "10.1.0", features = ["sentinel-auth", "i-scripts", "i-pubsub", "subscriber-client", "replicas", "sha-1"] }

# Observability（库只 emit，不负责 subscriber 的注册）
tracing = "0.1.44"

# Utilities
parking_lot = "0.12.5"
uuid = { version = "1.22.0", features = ["v4"] }
rand = "0.8"
dashmap = "6.1.0"
async-trait = "0.1"
bytes = "1.9"
